<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@android:color/background_light">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="1dp"
        android:background="@android:color/darker_gray">


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/habit_name"
            android:textSize="20sp"
            android:maxLength="20"
            android:maxLines="1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="15sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            />
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@mipmap/ic_launcher"
            android:scaleType="centerCrop"
            android:contentDescription="@string/event_pic"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            />
        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/comment"
            android:textSize="15sp"
            android:maxLength="20"
            android:maxLines="1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            />
        <Button
            android:id="@+id/dismiss"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_event"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            />


    </LinearLayout>
</LinearLayout>